# test_task

./: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: app.sh
src/: auth.py  config.py  main.py
src/routers/: AuthRouter.py  FileProcessingRouter.py
src/schemas/: SAccessToken.py  SFileStatus.py  SUser.py
